--- a/rssDemo.html
+++ b/rssDemo.html
@@ -13,7 +13,8 @@
 
     <script>
         // URL del feed RSS que quieres mostrar
-        const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=http://127.0.0.1:5500/rss.xml';
+        const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=https://raw.githubusercontent.com/ciroRubiales95/rssDemo/master/rss.xml'
+
 
         // Función para cargar el feed RSS usando fetch
         fetch(rssUrl)
