--- a/rssDemo.html
+++ b/rssDemo.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias de Empleo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Últimas Noticias de Empleo</h1>
+    <header>
+        <h1>Últimas Noticias de Empleo</h1>
+    </header>
     <ul class="rss-feed" id="rss-feed">
         <!-- Aquí se mostrarán las noticias -->
     </ul>
@@ -15,15 +18,18 @@
         // URL del feed RSS que quieres mostrar
         const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=https://raw.githubusercontent.com/ciroRubiales95/rssDemo/refs/heads/master/rss.xml';
 
-
         // Función para cargar el feed RSS usando fetch
         fetch(rssUrl)
             .then(response => response.json())
             .then(data => {
                 const feed = document.getElementById('rss-feed');
                 data.items.forEach(item => {
-                    const listItem = document.createElement('li');
-                    listItem.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a> <p>${item.description}</p>`;
+                    const listItem = document.createElement('article');
+                    listItem.innerHTML = `
+                        <h2><a href="${item.link}" target="_blank">${item.title}</a></h2>
+                        <img src="${item.enclosure.link}" alt="${item.title}" style="width: 100%; max-width: 500px;"/>
+                        <p>${item.description}</p>
+                    `;
                     feed.appendChild(listItem);
                 });
             })
@@ -31,3 +37,4 @@
     </script>
 </body>
 </html>
+
