--- a/rssDemo.html
+++ b/rssDemo.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Últimas Noticias de Empleo</h1>
+        <h1>JobBridge</h1>
+        <h2>Últimas Noticias de Empleo</h2>
     </header>
-    <ul class="rss-feed" id="rss-feed">
-        <!-- Aquí se mostrarán las noticias -->
-    </ul>
-
+    <div class="container">
+        <ul class="rss-feed" id="rss-feed">
+            <!-- Aquí se mostrarán las noticias -->
+        </ul>
+    </div>
     <script>
         // URL del feed RSS que quieres mostrar
         const rssUrl = 'https://api.rss2json.com/v1/api.json?rss_url=https://raw.githubusercontent.com/ciroRubiales95/rssDemo/refs/heads/master/rss.xml';
